// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello should render component with custom title 1`] = `
<h3
  className="title"
>
  Test title
</h3>
`;

exports[`Hello should render component with default title 1`] = `
<h3
  className="title"
>
  default title
</h3>
`;
